# cmake-template

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  generate_project.ps1  generate_project.sh
extlibs/libs/macos/lib/: libsfml-audio.2.4.2.dylib  libsfml-graphics.2.4.2.dylib  libsfml-network.2.4.2.dylib  libsfml-system.2.4.2.dylib  libsfml-window.2.4.2.dylib
extlibs/libs/msvc-universal/x86/: sfml-audio-d-2.ilk  sfml-audio-d.exp  sfml-audio-d.lib  sfml-graphics-d-2.ilk  sfml-graphics-d.exp  sfml-graphics-d.lib  sfml-main-d.lib  sfml-network-d-2.ilk  sfml-network-d.exp  sfml-network-d.lib  sfml-system-d-2.ilk  sfml-system-d.exp  sfml-system-d.lib  sfml-window-d-2.ilk  sfml-window-d.exp  sfml-window-d.lib
extlibs/libs/msvc/x86/: sfml-window-2.lib
include/: Config.h  Config.h.in  Config.hh.in
include/SouperFun/: Engine.h
include/SouperFun/Engine/: Core.h  Game.h
resources/: README.md
source/: CMakeLists.txt  Main.cc
source/SouperFun/: CMakeLists.txt  Core.cc  Game.cc
template/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
template/include/: Config.hh.in
template/include/Template/: Config.hh.in
template/tests/: CMakeLists.txt
